--- a/apps/new-page/src/app/components/kanban-tile/kanban-tile.component.scss
+++ b/apps/new-page/src/app/components/kanban-tile/kanban-tile.component.scss
@@ -1,8 +1,9 @@
 #container {
   padding: 20px;
   background: #f5f5f5;
-  min-height: 100vh;
+  min-height: 50vh;
   width: 100%;
+  border-radius: 2px;
 
   .header {
     display: flex;
@@ -150,6 +151,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: #f5f5f5;
 
     span {
       flex: 1;
@@ -231,4 +233,4 @@
 
 .kanban-columns.cdk-drop-list-dragging .kanban-column:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-} 
+}
